force-app/src/objects/PagesApi__Fonteva_Controller_Route__mdt.object
<CustomObject>
    <description>Lightning community routes by record id&apos;s.</description>
    <fields>
        <fullName>PagesApi__Apex_Class__c</fullName>
        <description>Apex class to get record information based on route</description>
        <inlineHelpText>Apex class to get record information based on route</inlineHelpText>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Component__c</fullName>
        <description>Lightning Component name without the namespace to show based on SObject route.</description>
        <inlineHelpText>Lightning Component name without the namespace to show based on SObject route.</inlineHelpText>
        <label>Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this record will become enabled as a route.</description>
        <inlineHelpText>When checked, this record will become enabled as a route.</inlineHelpText>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__SObject_Name__c</fullName>
        <description>SObject name to base the route on</description>
        <inlineHelpText>SObject name to base the route on</inlineHelpText>
        <label>SObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fonteva Controller Route</label>
    <pluralLabel>Fonteva Controller Routes</pluralLabel>
</CustomObject>